--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.udacity.stockhawk">
+    package="com.shrreya.stockhawk">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.Manifest.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
-        android:name=".StockHawkApp"
+        android:name="com.shrreya.stockhawk.StockHawkApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
         android:supportsRtl="true"
+        android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name="com.shrreya.stockhawk.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,19 +24,38 @@
         </activity>
 
         <service
-            android:name=".sync.QuoteIntentService"
+            android:name="com.shrreya.stockhawk.sync.QuoteIntentService"
             android:exported="false" />
 
         <provider
-            android:name=".data.StockProvider"
-            android:authorities="com.udacity.stockhawk"
+            android:name="com.shrreya.stockhawk.data.StockProvider"
+            android:authorities="com.shrreya.stockhawk"
             android:exported="false" />
 
         <service
-            android:name=".sync.QuoteJobService"
+            android:name="com.shrreya.stockhawk.sync.QuoteJobService"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <activity android:name="com.shrreya.stockhawk.ui.DetailActivity"></activity>
+
+        <receiver
+            android:name="com.shrreya.stockhawk.widget.StockWidgetProvider"
+            android:label="@string/widget_label">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+                <action android:name="com.shrreya.stockhawk.ACTION_DATA_UPDATED"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/stock_widget_provider_info"/>
+        </receiver>
+
+        <service
+            android:name="com.shrreya.stockhawk.widget.StockWidgetService"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
 
 </manifest>
